--- a/pyfigures/changes.txt
+++ b/pyfigures/changes.txt
@@ -1,3 +1,9 @@
+11/07/2024
+-recorded and mounted a demo video https://youtu.be/iqknxBF6BtE
+-prevented an error if the user drops a folder (folder is ignored for now)
+-fixed an erroneous pixel to unit conversion factor for tif files (I was just getting the dpi... i.e. 0.013889 == 1/72)
+-created the demo data and script to show plots and also templates
+
 10/07/2024
 -started designing the website
 -wrote the conda install instructions
@@ -33,7 +39,7 @@
 -removed all unused classes
 -prevented useless ops when the user just edits the name without really changing it in the annotation editor
 -built the first figure of the PyFigures manuscript
--pushed BAtools to github (private repo)
+-pushed batoolset to github (private repo)
 -pushed PyFigures to github (private repo)
 
 08/07/2024
