--- a/pyfigures/changes.txt
+++ b/pyfigures/changes.txt
@@ -2,6 +2,8 @@
 -fixed a weird bug caused by a folder being named xml with an init in it while I was using an xml.etree somehwere
 -simplified a lot the java install process using the great install-jdk library to ease the use of the bio-formats library
 -fixed an illogic behavior of rows when they contain only one image (created from a panel)
+-added a Lut creator from formula and a lut editor (not yet available to the end user)
+-fixed a missing library import
 
 24/07/2024
 -added an 'Reshape to panel' to revamp an existing panel and give it a new shape without having to split it beforehand
